--- a/Interior/css/interior.css
+++ b/Interior/css/interior.css
@@ -1360,6 +1360,11 @@ body::before {
   padding-bottom: 1.5rem;
 }
 
+.px-5 {
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+}
+
 .pb-10 {
   padding-bottom: 2.5rem;
 }
@@ -2151,6 +2156,11 @@ body::before {
 
   .lg\:col-start-3 {
     grid-column-start: 3;
+  }
+
+  .lg\:-mx-8 {
+    margin-left: -2rem;
+    margin-right: -2rem;
   }
 
   .lg\:w-1\/3 {
