--- a/Interior/css/interior.css
+++ b/Interior/css/interior.css
@@ -1489,6 +1489,10 @@ body::before {
   padding-top: 2rem;
 }
 
+.pt-4 {
+  padding-top: 1rem;
+}
+
 .text-left {
   text-align: left;
 }
@@ -1669,6 +1673,11 @@ body::before {
 .text-white-gold {
   --tw-text-opacity: 1;
   color: rgb(180 159 113 / var(--tw-text-opacity));
+}
+
+.text-indigo-600 {
+  --tw-text-opacity: 1;
+  color: rgb(79 70 229 / var(--tw-text-opacity));
 }
 
 .underline {
