--- a/Interior/css/interior.css
+++ b/Interior/css/interior.css
@@ -714,6 +714,10 @@ body::before {
   margin-left: 0.25rem;
 }
 
+.ml-2 {
+  margin-left: 0.5rem;
+}
+
 .ml-3 {
   margin-left: 0.75rem;
 }
@@ -962,6 +966,12 @@ body::before {
 
 .resize {
   resize: both;
+}
+
+.appearance-none {
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
 }
 
 .grid-cols-1 {
@@ -1307,6 +1317,10 @@ body::before {
   --tw-bg-opacity: 0.75;
 }
 
+.bg-\[url\(\'\/Interior\/images\/silver\.png\'\)\] {
+  background-image: url('/Interior/images/silver.png');
+}
+
 .bg-\[url\(\'\/images\/blue-button\.png\'\)\] {
   background-image: url('/images/blue-button.png');
 }
@@ -1323,12 +1337,8 @@ body::before {
   background-image: url('/images/silver.png');
 }
 
-.bg-\[url\(\'\/Interior\/images\/blue-button\.png\'\)\] {
-  background-image: url('/Interior/images/blue-button.png');
-}
-
-.bg-\[url\(\'\/Interior\/images\/silver\.png\'\)\] {
-  background-image: url('/Interior/images/silver.png');
+.bg-\[url\(\'\/images\/white-stars-bg\.jpg\'\)\] {
+  background-image: url('/images/white-stars-bg.jpg');
 }
 
 .bg-auto {
@@ -1411,6 +1421,11 @@ body::before {
   padding-bottom: 0.375rem;
 }
 
+.py-12 {
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+}
+
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
@@ -1439,6 +1454,11 @@ body::before {
 .py-6 {
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
+}
+
+.py-8 {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
 }
 
 .pb-10 {
@@ -1554,6 +1574,10 @@ body::before {
   line-height: 2rem;
 }
 
+.text-\[10px\] {
+  font-size: 10px;
+}
+
 .text-base {
   font-size: 1rem;
   line-height: 1.5rem;
@@ -1577,10 +1601,6 @@ body::before {
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
-}
-
-.text-\[10px\] {
-  font-size: 10px;
 }
 
 .font-bold {
@@ -1718,6 +1738,16 @@ body::before {
 
 .underline {
   text-decoration-line: underline;
+}
+
+.placeholder-gray-400::-moz-placeholder {
+  --tw-placeholder-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-placeholder-opacity));
+}
+
+.placeholder-gray-400::placeholder {
+  --tw-placeholder-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-placeholder-opacity));
 }
 
 .opacity-0 {
@@ -1950,6 +1980,11 @@ body::before {
   --tw-ring-color: rgb(255 255 255 / var(--tw-ring-opacity));
 }
 
+.focus\:ring-white-gold:focus {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(180 159 113 / var(--tw-ring-opacity));
+}
+
 .focus\:ring-offset-2:focus {
   --tw-ring-offset-width: 2px;
 }
@@ -2051,6 +2086,11 @@ body::before {
     margin-right: -1.5rem;
   }
 
+  .sm\:mx-auto {
+    margin-left: auto;
+    margin-right: auto;
+  }
+
   .sm\:mt-0 {
     margin-top: 0px;
   }
@@ -2067,8 +2107,16 @@ body::before {
     width: auto;
   }
 
+  .sm\:w-full {
+    width: 100%;
+  }
+
   .sm\:max-w-none {
     max-width: none;
+  }
+
+  .sm\:max-w-md {
+    max-width: 28rem;
   }
 
   .sm\:grid-cols-3 {
@@ -2119,6 +2167,11 @@ body::before {
 
   .sm\:rounded-lg {
     border-radius: 0.5rem;
+  }
+
+  .sm\:px-10 {
+    padding-left: 2.5rem;
+    padding-right: 2.5rem;
   }
 
   .sm\:px-6 {
